[gd_scene load_steps=9 format=4 uid="uid://bhu4wmpu6vi7q"]

[ext_resource type="TileSet" uid="uid://m33v4tewta8i" path="res://levels/tilesets/forgotten_forest.tres" id="1_dxpbd"]
[ext_resource type="Script" uid="uid://b8d2bm85cb2iv" path="res://title_screen/title_screen.gd" id="1_vbjqi"]
[ext_resource type="PackedScene" uid="uid://he3jeovjo2u6" path="res://levels/props/Torch.tscn" id="2_2dq6q"]
[ext_resource type="Texture2D" uid="uid://da8n0jooae3fq" path="res://title_screen/metroidvania_logo.png" id="3_2dq6q"]

[sub_resource type="Animation" id="Animation_fk0fn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0m3ch"]
resource_name = "loop"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_vbjqi"]
resource_name = "start"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45000002, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqrgu"]
_data = {
&"RESET": SubResource("Animation_fk0fn"),
&"loop": SubResource("Animation_0m3ch"),
&"start": SubResource("Animation_vbjqi")
}

[node name="title_screen" type="CanvasLayer"]
layer = 5
script = ExtResource("1_vbjqi")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="world" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MapLayer_1" type="TileMapLayer" parent="Control/world"]
position = Vector2(-159, -1)
tile_map_data = PackedByteArray("AAAEAAAAAAAHAA0AAAAFAAAAAAAHAA0AAAAGAAAAAAAHAA0AAAAHAAAAAAAHAA0AAAAIAAAAAAAHAA0AAAAJAAAAAAAHAA0AAAAEAAEAAAAJAA0AAAAFAAEAAAAJAA0AAAAGAAEAAAAJAA0AAAAHAAEAAAAJAA0AAAAIAAEAAAAJAA0AAAAJAAEAAAAJAA0AAAAEAAIAAAAHAA0AAAAEAAMAAAAHAA0AAAAFAAIAAAAHAA0AAAAFAAMAAAAHAA0AAAAGAAIAAAAHAA0AAAAGAAMAAAAHAA0AAAAHAAIAAAAHAA0AAAAHAAMAAAAHAA0AAAAIAAIAAAAHAA0AAAAIAAMAAAAHAA0AAAAJAAIAAAAHAA0AAAAJAAMAAAAHAA0AAAAEAAQAAAAJAA0AAAAEAAUAAAAJAA0AAAAFAAQAAAAJAA0AAAAFAAUAAAAJAA0AAAAGAAQAAAAJAA0AAAAGAAUAAAAJAA0AAAAHAAQAAAAJAA0AAAAHAAUAAAAJAA0AAAAIAAQAAAAJAA0AAAAIAAUAAAAJAA0AAAAJAAQAAAAJAA0AAAAJAAUAAAAJAA0AAAAEAAYAAAAHAA0AAAAFAAYAAAAHAA0AAAAGAAYAAAAHAA0AAAAHAAYAAAAHAA0AAAAIAAYAAAAHAA0AAAAJAAYAAAAHAA0AAAALAAAAAAAHAA0AAAALAAEAAAAJAA0AAAALAAIAAAAHAA0AAAALAAMAAAAHAA0AAAALAAQAAAAJAA0AAAALAAUAAAAJAA0AAAALAAYAAAAHAA0AAAAMAAAAAAAHAA0AAAAMAAEAAAAJAA0AAAAMAAIAAAAHAA0AAAAMAAMAAAAHAA0AAAAMAAQAAAAJAA0AAAAMAAUAAAAJAA0AAAAMAAYAAAAHAA0AAAANAAAAAAAHAA0AAAANAAEAAAAJAA0AAAANAAIAAAAHAA0AAAANAAMAAAAHAA0AAAANAAQAAAAJAA0AAAANAAUAAAAJAA0AAAANAAYAAAAHAA0AAAAOAAAAAAAHAA0AAAAOAAEAAAAJAA0AAAAOAAIAAAAHAA0AAAAOAAMAAAAHAA0AAAAOAAQAAAAJAA0AAAAOAAUAAAAJAA0AAAAOAAYAAAAHAA0AAAAPAAAAAAAHAA0AAAAPAAEAAAAJAA0AAAAPAAIAAAAHAA0AAAAPAAMAAAAHAA0AAAAPAAQAAAAJAA0AAAAPAAUAAAAJAA0AAAAPAAYAAAAHAA0AAAAQAAAAAAAHAA0AAAAQAAEAAAAJAA0AAAAQAAIAAAAHAA0AAAAQAAMAAAAHAA0AAAAQAAQAAAAJAA0AAAAQAAUAAAAJAA0AAAAQAAYAAAAHAA0AAAARAAAAAAAHAA0AAAARAAEAAAAJAA0AAAARAAIAAAAHAA0AAAARAAMAAAAHAA0AAAARAAQAAAAJAA0AAAARAAUAAAAJAA0AAAARAAYAAAAHAA0AAAASAAAAAAAHAA0AAAASAAEAAAAJAA0AAAASAAIAAAAHAA0AAAASAAMAAAAHAA0AAAASAAQAAAAJAA0AAAASAAUAAAAJAA0AAAASAAYAAAAHAA0AAAATAAAAAAAHAA0AAAATAAEAAAAJAA0AAAATAAIAAAAHAA0AAAATAAMAAAAHAA0AAAATAAQAAAAJAA0AAAATAAUAAAAJAA0AAAATAAYAAAAHAA0AAAAUAAAAAAAHAA0AAAAUAAEAAAAJAA0AAAAUAAIAAAAHAA0AAAAUAAMAAAAHAA0AAAAUAAQAAAAJAA0AAAAUAAUAAAAJAA0AAAAUAAYAAAAHAA0AAAAKAAYAAAAHAA0AAAAKAAUAAAAJAA0AAAAKAAQAAAAJAA0AAAAKAAMAAAAHAA0AAAAKAAIAAAAHAA0AAAAKAAEAAAAJAA0AAAAKAAAAAAAHAA0AAAA=")
tile_set = ExtResource("1_dxpbd")

[node name="MapLayer_2" type="TileMapLayer" parent="Control/world"]
position = Vector2(-159, -1)
tile_map_data = PackedByteArray("AAAHAAIAAAAHAAwAAAAIAAIAAAAIAAwAAAAJAAIAAAAJAAwAAAAHAAYAAAAHAA4AAAAIAAYAAAAIAA4AAAAJAAYAAAAJAA4AAAAIAAUAAAAIAA0AAAAIAAQAAAAIAA0AAAAIAAMAAAAIAA0AAAAPAAIAAAAHAAwAAAAPAAYAAAAHAA4AAAAQAAIAAAAIAAwAAAAQAAYAAAAIAA4AAAAQAAMAAAAIAA0AAAAQAAQAAAAIAA0AAAAQAAUAAAAIAA0AAAARAAIAAAAJAAwAAAARAAYAAAAJAA4AAAA=")
tile_set = ExtResource("1_dxpbd")

[node name="MapLayer_3" type="TileMapLayer" parent="Control/world"]
position = Vector2(-31, -1)
tile_map_data = PackedByteArray("AAABAAcAAAADAAgAAAABAAgAAAADAAkAAAACAAcAAAADAAgAAAACAAgAAAADAAkAAAADAAcAAAADAAgAAAADAAgAAAADAAkAAAAEAAcAAAACAAgAAAAEAAgAAAACAAkAAAAFAAcAAAADAAgAAAAFAAgAAAADAAkAAAAAAAcAAAACAAgAAAAAAAgAAAACAAkAAAAAAAAAAAADAAsAAAAAAAEAAAADAAoAAAAAAAIAAAADAAwAAAABAAAAAAADAAsAAAABAAEAAAAEAA4AAAABAAIAAAAEAAwAAAACAAAAAAADAAsAAAACAAEAAAADAAwAAAADAAAAAAACAAsAAAADAAEAAAACAAwAAAAEAAAAAAADAAsAAAAEAAEAAAADAAwAAAAFAAAAAAACAAsAAAAFAAEAAAACAAwAAAACAAIAAAAFAAwAAAAHAAAAAAACAAsAAAAHAAEAAAACAAwAAAAHAAcAAAADAAgAAAAHAAgAAAADAAkAAAAIAAAAAAADAAsAAAAIAAEAAAADAAwAAAAIAAcAAAACAAgAAAAIAAgAAAACAAkAAAAJAAAAAAADAAsAAAAJAAEAAAADAAwAAAAJAAcAAAADAAgAAAAJAAgAAAADAAkAAAAKAAAAAAACAAsAAAAKAAEAAAACAAwAAAAKAAcAAAACAAgAAAAKAAgAAAACAAkAAAALAAAAAAADAAsAAAALAAEAAAADAAwAAAALAAcAAAADAAgAAAALAAgAAAADAAkAAAAMAAAAAAADAAsAAAAMAAEAAAACAAwAAAAMAAcAAAACAAgAAAAMAAgAAAACAAkAAAANAAAAAAADAAsAAAANAAEAAAADAAwAAAANAAcAAAADAAgAAAANAAgAAAADAAkAAAAOAAAAAAADAAsAAAAOAAEAAAACAAwAAAAOAAIAAAAAAAwAAAAOAAcAAAACAAgAAAAOAAgAAAACAAkAAAAPAAAAAAADAAsAAAAPAAEAAAADAA4AAAAPAAIAAAABAAwAAAAPAAcAAAADAAgAAAAPAAgAAAADAAkAAAAQAAAAAAADAAsAAAAQAAEAAAADAAsAAAAQAAIAAAACAAwAAAAQAAcAAAACAAgAAAAQAAgAAAACAAkAAAAGAAgAAAACAAkAAAAGAAcAAAACAAgAAAAGAAEAAAADAAwAAAAGAAAAAAADAAsAAAA=")
tile_set = ExtResource("1_dxpbd")

[node name="Torch" parent="Control/world" instance=ExtResource("2_2dq6q")]
position = Vector2(80, 229)

[node name="Torch2" parent="Control/world" instance=ExtResource("2_2dq6q")]
position = Vector2(405, 230)

[node name="main_menu" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -107.0
offset_right = 74.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="logo" type="Control" parent="Control/main_menu"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="Control/main_menu/logo"]
position = Vector2(0, 61)
texture = ExtResource("3_2dq6q")
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/main_menu/logo"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_oqrgu")
}
autoplay = "start"

[node name="new_game_button" type="Button" parent="Control/main_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="load_game_button" type="Button" parent="Control/main_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "load Game"

[node name="new_game_menu" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -52.0
offset_right = 90.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/new_game_menu"]
modulate = Color(0.6745098, 0.19607843, 0.19607843, 1)
layout_mode = 2
text = "start new game..."
horizontal_alignment = 1

[node name="Control" type="Control" parent="Control/new_game_menu"]
layout_mode = 2

[node name="new_slot_01" type="Button" parent="Control/new_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Begin slot 01"

[node name="new_slot_02" type="Button" parent="Control/new_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Begin slot 01"

[node name="new_slot_03" type="Button" parent="Control/new_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Begin slot 01"

[node name="new_game_menu_back" type="Button" parent="Control/new_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="load_game_menu" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -52.0
offset_right = 90.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/load_game_menu"]
modulate = Color(0.6745098, 0.19607843, 0.19607843, 1)
layout_mode = 2
text = "load a saved game..."
horizontal_alignment = 1

[node name="Control" type="Control" parent="Control/load_game_menu"]
layout_mode = 2

[node name="load_slot_01" type="Button" parent="Control/load_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Slot 01"

[node name="load_slot_02" type="Button" parent="Control/load_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Slot 02"

[node name="load_slot_03" type="Button" parent="Control/load_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Slot 03"

[node name="load_menu_back" type="Button" parent="Control/load_game_menu"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
